--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <nav class="navbar">
         <!-- LOGO -->
         <div class="logo">
-          <img src="img/logo.svg" alt="" />
+          <img src="img/logo.svg" alt="logo" />
         </div>
         <!-- NAVIGATION MENU -->
         <ul class="nav-links">
@@ -124,12 +124,14 @@
           </div>
           <div class="img-box">
             <img src="img/coding.jpg" alt="man talking in phont" />
+            <img class="play-icon" src="img/playicon.png" alt="playicon" />
           </div>
         </div>
 
         <div class="about-container img-left">
           <div class="img-box">
             <img src="img/coding2.jpg" alt="man woking in workstation" />
+            <img class="play-icon" src="img/playicon.png" alt="playicon" />
           </div>
           <div class="text-box">
             <h2 class="secondary-heading">
