--- a/index.html
+++ b/index.html
@@ -22,12 +22,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <!-- <script
-      src="https://kit.fontawesome.com/f6252684d5.js"
-      crossorigin="anonymous"
-    ></script> -->
   </head>
   <body>
+    <!-- ========== -->
+    <!-- Header Starts -->
+    <!-- ========== -->
     <header class="header">
       <nav class="navbar">
         <!-- LOGO -->
@@ -74,9 +73,13 @@
         </ul>
       </nav>
     </header>
-
+    <!-- ========== -->
+    <!-- Header Ends -->
+    <!-- ========== -->
     <main>
-      <!-- start hero section -->
+      <!-- ========== -->
+      <!-- Hero Starts -->
+      <!-- ========== -->
 
       <section class="hero">
         <div class="tex-content">
@@ -102,9 +105,14 @@
         <div class="hero-img"></div>
       </section>
 
-      <!-- end hero section -->
+      <!-- ========== -->
+      <!-- Hero Ends -->
+      <!-- ========== -->
 
-      <!-- About Us Section Starts -->
+      <!-- ========== -->
+      <!-- About Section Starts -->
+      <!-- ========== -->
+
       <section class="about-section">
         <div class="about-container img-right">
           <div class="text-box">
@@ -152,8 +160,14 @@
           </div>
         </div>
       </section>
-      <!-- About Us Section Ends -->
-      <!-- Slider Section starts -->
+      <!-- ========== -->
+      <!-- About Section Ends -->
+      <!-- ========== -->
+
+      <!-- ========== -->
+      <!-- Slider Section Starts -->
+      <!-- ========== -->
+
       <section class="slider">
         <div class="slide-text-content">
           <div class="text-area">
@@ -202,7 +216,9 @@
           </div>
         </div>
       </section>
-      <!-- Slider Us Section Ends -->
+      <!-- ========== -->
+      <!-- Slider Section Ends -->
+      <!-- ========== -->
     </main>
 
     <!-- swiperJS script -->
@@ -211,8 +227,6 @@
 
     <script type="module">
       import Swiper from "https://unpkg.com/swiper@8/swiper-bundle.esm.browser.min.js";
-
-      // const swiper = new Swiper(...)
     </script>
     <script src="js/script.js"></script>
   </body>
